Homepage design and development is finished

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2213,6 +2213,10 @@ img {
   background-color: #f0f3f4;
 }
 
+.banner__image {
+  padding-left: 150px !important;
+}
+
 .img-seo {
   -webkit-animation: mover 1.7s infinite alternate;
   animation: mover 1.7s infinite alternate;
