--- a/About/About.css
+++ b/About/About.css
@@ -19,7 +19,7 @@
   width: 100%;
   height: 3px;
   border-radius: 3px;
-  background-color: #d40121 !important;
+  background-color: #1963a2 !important;
   opacity: 0;
   -webkit-transition: all 0.2s linear;
   -o-transition: all 0.2s linear;
@@ -32,26 +32,26 @@
   height: 2.8rem;
   font-size: 1.1rem;
   color: #ffffff;
-  background: #d40121 !important;
+  background: #1963a2 !important;
   -webkit-box-shadow: none !important;
   box-shadow: none !important;
 }
 
 .banner {
-  height: 900px !important;
-  margin-bottom: 280px !important;
+  height: 600px !important;
+  margin-bottom: 80px !important;
 }
 
 .header .navbar .nav-btn--signup {
   color: #ffffff !important;
-  background-color: #d40121 !important;
-  -webkit-box-shadow: 0 0.75rem 1.5625rem #9c4552 !important;
-  box-shadow: 0 0.5rem 1.5625rem #843440 !important;
+  background-color: #1963a2 !important;
+  -webkit-box-shadow: 0 0.75rem 1.5625rem #3c6991 !important;
+  box-shadow: 0 0.5rem 1.5625rem #4f7da5 !important;
   border-radius: 60px;
 }
 
 .header .navbar-toggler[aria-expanded="true"] {
-  color: #d40121 !important;
+  color: #1963a2 !important;
 }
 
 .banner-wrapper::before {
@@ -60,13 +60,21 @@
   width: 1382px;
   left: 50%;
   top: 0;
-  background: url(../assets/images/banner/banner-bg-redd.svg) no-repeat bottom
+  background: url(../assets/images/banner/banner-bg-blue.svg) no-repeat bottom
     left/cover !important;
 }
 
 .footer {
-  background-image: url(../assets/images/footer/footer-bg\ copy1.svg) !important;
+  background-image: url(../assets/images/footer/footer-bg\ copy.svg) !important;
   background-repeat: no-repeat;
   background-position: 50% 40px;
   background-size: cover;
+}
+
+.features--pink .features__container {
+  background-color: white !important;
+}
+
+.banner__title {
+  font-size: 900px !important;
 }
