--- a/About/About.css
+++ b/About/About.css
@@ -75,6 +75,6 @@
   background-color: white !important;
 }
 
-.banner__title {
-  font-size: 900px !important;
+.primary-btn {
+  background-color: #1963a2 !important;
 }
