added new images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3592,6 +3592,10 @@ img {
   .scroll-top {
     display: none !important;
   }
+
+  .accordion-title {
+    margin-right: 80px !important;
+  }
 }
 
 @media (max-width: 480px) {
