--- a/assets/css/rtl.css
+++ b/assets/css/rtl.css
@@ -313,11 +313,9 @@ body.rtl {
     padding-bottom: 40px; /* Add 20px padding to the video container */
   }
 
-
   .scroll-top {
     display: none !important;
   }
-
 }
 
 @media screen and (max-width: 780px) {
@@ -2622,7 +2620,7 @@ img {
 }
 
 .features__title {
-  font-size: 1.75rem;
+  font-size: 1.21rem;
   font-weight: 800;
   line-height: 1.35417;
   margin: 1.575rem 0;
@@ -3675,12 +3673,9 @@ img {
 }
 
 .FAQ-SEC {
-  margin: 0;
-  padding: 0;
   background: #fff;
   color: #292d34;
   display: flex;
-  min-height: 100vh;
 }
 
 .container-FAQ {
@@ -3690,6 +3685,7 @@ img {
 }
 .container-FAQ h2 {
   color: #5921b8;
+  padding-right: 185px;
 }
 
 .accordion .accordion-item {
@@ -3702,7 +3698,7 @@ img {
 .accordion button {
   position: relative;
   display: block;
-  text-align: left;
+  text-align: right;
   width: 100%;
   padding: 1em 0;
   color: #292d34;
@@ -3730,7 +3726,7 @@ img {
   display: inline-block;
   position: absolute;
   top: 18px;
-  right: 0;
+  left: 0;
   width: 22px;
   height: 22px;
   border: 1px solid;
@@ -3805,7 +3801,6 @@ img {
   }
 }
 
-
 @media (max-width: 767px) {
   .features--green .features__videos-wrapper {
     padding-bottom: 40px; /* Add 20px padding to the video container */
@@ -3833,4 +3828,13 @@ img {
     overflow-x: hidden;
     overflow-y: hidden;
   }
+}
+
+.banner__review__partners__link:last-child {
+  margin-right: 15px;
+}
+
+#kurdish_wrapper {
+  margin-top: 30px;
+  margin-right: 20px;
 }
